--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npm install --force"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
-    "@mui/styles": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "apexcharts": "^3.48.0",
     "axios": "^1.6.8",
@@ -23,10 +21,10 @@
     "mongoose": "^8.2.3",
     "next": "14.1.4",
     "postcss": "^8.4.38",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
