--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "apexcharts": "^3.48.0",
     "axios": "^1.6.8",
     "flatpickr": "^4.6.13",
+    "fs": "^0.0.1-security",
     "jsvectormap": "^1.5.3",
     "mongoose": "^8.2.3",
     "next": "14.1.4",
+    "nodemailer": "^6.9.13",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
