--- a/package.json
+++ b/package.json
@@ -18,19 +18,22 @@
     "axios": "^1.6.8",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
-    "mongoose": "^8.2.3",
+    "mongoose": "^8.4.1",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.19",
     "nodemailer": "^6.9.13",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.3",
-    "universal-cookie": "^7.1.4"
+    "universal-cookie": "^7.1.4",
+    "zod": "^3.23.8"
   }
 }
