--- a/package.json
+++ b/package.json
@@ -10,17 +10,28 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
+    "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.3",
     "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "flatpickr": "^4.6.13",
+    "formidable": "^3.5.1",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.5.3",
+    "micro": "^10.0.1",
     "mongoose": "^8.4.1",
-    "next": "14.1.4",
+    "multer": "^1.4.5-lts.1",
+    "next": "^14.1.4",
     "next-auth": "^5.0.0-beta.19",
+    "next-connect": "^1.0.0",
     "nodemailer": "^6.9.13",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
@@ -34,6 +45,13 @@
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.3",
     "universal-cookie": "^7.1.4",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.11",
+    "@types/node": "20.14.9",
+    "typescript": "5.5.2"
   }
 }
