--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.3",
     "universal-cookie": "^7.1.4",
