--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "redux": "^5.0.1",
     "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
+    "suneditor-react": "^3.6.1",
     "tailwindcss": "^3.4.3",
     "universal-cookie": "^7.1.4",
     "uuid": "^10.0.0",
