--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-MONG_URL = "mongodb+srv://serverBoiler:BrxyutmzqiCM4U6c@cluster0.t30x6.mongodb.net/lowrateloan?retryWrites=true&w=majority&appName=Cluster0"
+# MONG_URL = "mongodb+srv://serverBoiler:BrxyutmzqiCM4U6c@cluster0.t30x6.mongodb.net/lowrateloan?retryWrites=true&w=majority&appName=Cluster0"
+
+
+MONG_URL = "mongodb+srv://info:FsEUxRCoqD4LNlct@cluster0.zrx72qz.mongodb.net/lowRateHomeLoan"
+
+
 jwt_secret_key= lowrateloansecret
 DOMAIN=http://localhost:3000
 
