--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.20",
+    "@mui/styles": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.3",
     "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
     "crypto": "^1.0.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "flatpickr": "^4.6.13",
     "formidable": "^3.5.1",
     "fs": "^0.0.1-security",
+    "gsap": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.5.3",
     "micro": "^10.0.1",
@@ -44,6 +47,7 @@
     "redux": "^5.0.1",
     "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
+    "suneditor": "^2.46.3",
     "suneditor-react": "^3.6.1",
     "tailwindcss": "^3.4.3",
     "universal-cookie": "^7.1.4",
