--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.20",
+    "@mui/material": "^5.16.6",
     "@mui/styles": "^5.16.6",
+    "@mui/system": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.3",
     "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
