--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "eslint-config-next": "^15.0.0-rc.0",
     "express": "^4.19.2",
     "flatpickr": "^4.6.13",
     "formidable": "^3.5.1",
@@ -32,15 +33,15 @@
     "micro": "^10.0.1",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
-    "next": "^14.1.4",
+    "next": "^15.0.0-rc.0",
     "next-auth": "^5.0.0-beta.19",
     "next-connect": "^1.0.0",
     "nodemailer": "^6.9.13",
     "postcss": "^8.4.38",
-    "react": "^18.2.0",
+    "react": "^19.0.0-rc-187dd6a7-20240806",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.0.0-rc-187dd6a7-20240806",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
