--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^19.0.0-rc-187dd6a7-20240806",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
