--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 MONG_URL = "mongodb+srv://info:FsEUxRCoqD4LNlct@cluster0.zrx72qz.mongodb.net/lowRateHomeLoan"
 jwt_secret_key= lowrateloansecret
 DOMAIN=http://localhost:3000
-
+SITE_URL=https://lowratehomeloan.com.au
