--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap": "next-sitemap"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
@@ -36,6 +37,7 @@
     "next": "^15.0.0-rc.0",
     "next-auth": "^5.0.0-beta.19",
     "next-connect": "^1.0.0",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.13",
     "postcss": "^8.4.38",
     "react": "^19.0.0-rc-187dd6a7-20240806",
