--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node build-utilities/generate-sitemap.js && next build",
     "start": "next start",
     "lint": "next lint",
     "sitemap": "next-sitemap"
